src/tests/snapshots/rs_handstrength__tests__can_have_strflush__tests__cal_gaps1.snap
---
source: src/tests/can_have_strflush.rs
expression: blocked
---
Ok(
    [
        [
            [
                Card {
                    value: 5,
                    suit: S,
                },
                Card {
                    value: 3,
                    suit: S,
                },
            ],
        ],
    ],
)
