src/tests/snapshots/rs_handstrength__tests__can_have_strflush__tests__cal_gaps12-2.snap
---
source: src/tests/can_have_strflush.rs
expression: can_have
---
[
    (
        [
            Card {
                value: 5,
                suit: S,
            },
            Card {
                value: 3,
                suit: S,
            },
            Card {
                value: 1,
                suit: S,
            },
        ],
        [
            [
                [
                    Card {
                        value: 4,
                        suit: S,
                    },
                    Card {
                        value: 2,
                        suit: S,
                    },
                ],
            ],
        ],
    ),
]
